<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WordBook</string>
    <string name="title_word_detail">Word Detail</string>
    <string name="title_activity_word_add">Word Add</string>
    <string name="title_activity_word_update">Word Update</string>
    <string name="title_activity_training">Word Card</string>
    <string name="title_activity_word_card_settings">Settings</string>
    <string name="word">Word</string>
    <string name="category">Category</string>
    <string name="meaning">Meaning</string>
    <string name="training_target">In word card</string>
    <string name="other">other</string>
    <string name="add">Add</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="kana">Kana</string>
    <string name="training_target_on">Show</string>
    <string name="training_target_off">Not show</string>
    <string name="full_byte_space">　</string>
    <string name="update">Update</string>
    <string name="inserted_date">Registration date</string>
    <string name="updated_date">Last updated date</string>
    <string name="back_side">reverse side</string>
    <string name="next">next</string>
    <string name="restart">From the beginning</string>
    <string name="end_of_word_card">conclude</string>
    <string name="word_card_count">LAP:</string>
    <string name="word_card_empty">There is no word to show.</string>
    <string name="search_view_hint">word</string>
    <string name="search_result">Result</string>
    <string name="no_search_result">There are no results.</string>
    <string name="history">History</string>
    <string name="no_history">There are no results.</string>
    <string name="choice_input_element">Destination selection</string>
    <string name="word_card_remaining">The remaining %s seconds</string>
    <string name="help">Help</string>
</resources>
