<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context="jp.gr.java_conf.mkh.wordbook.view.WordAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/kana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kana"
            android:textSize="@dimen/abc_text_size_title_material" />
        <EditText
            android:id="@+id/edit_kana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_byte_space"/>

        <TextView
            android:id="@+id/word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/word"
            android:textSize="@dimen/abc_text_size_title_material" />
        <EditText
            android:id="@+id/edit_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_byte_space"/>

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="@dimen/abc_text_size_title_material" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edit_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:id="@+id/button_history"
                android:layout_gravity="end" />

         </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/full_byte_space"/>

        <TextView
            android:id="@+id/meaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meaning"
            android:textSize="@dimen/abc_text_size_title_material" />
        <EditText
            android:id="@+id/edit_meaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_byte_space"/>

        <TextView
            android:id="@+id/training_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training_target"
            android:textSize="@dimen/abc_text_size_title_material" />
        <ToggleButton
            android:id="@+id/training_target_toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textOff="@string/training_target_off"
            android:textOn="@string/training_target_on"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_byte_space"/>

        <TextView
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textSize="@dimen/abc_text_size_title_material" />
        <EditText
            android:id="@+id/edit_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
    </LinearLayout>
</ScrollView>
