<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="jp.gr.java_conf.mkh.wordbook.view.WordUpdateFragment">

    <ScrollView
        android:id="@+id/scrollView_word_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/kana_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kana"
                    android:textSize="@dimen/abc_text_size_title_material" />
                <EditText
                    android:id="@+id/edit_kana_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_byte_space"/>

                <TextView
                    android:id="@+id/word_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/word"
                    android:textSize="@dimen/abc_text_size_title_material" />
                <EditText
                    android:id="@+id/edit_word_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_byte_space"/>

                <TextView
                    android:id="@+id/category_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textSize="@dimen/abc_text_size_title_material" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/edit_category_update"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:inputType="text" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/history"
                        android:id="@+id/button_history_update"
                        android:layout_gravity="end" />

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_byte_space"/>

                <TextView
                    android:id="@+id/meaning_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meaning"
                    android:textSize="@dimen/abc_text_size_title_material" />
                <EditText
                    android:id="@+id/edit_meaning_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_byte_space"/>

                <TextView
                    android:id="@+id/training_target"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/training_target"
                    android:textSize="@dimen/abc_text_size_title_material" />
                <ToggleButton
                    android:id="@+id/training_target_toggle_button_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:textOff="@string/training_target_off"
                    android:textOn="@string/training_target_on"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_byte_space"/>

                <TextView
                    android:id="@+id/other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:textSize="@dimen/abc_text_size_title_material" />
                <EditText
                    android:id="@+id/edit_other_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
