<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView_word_detail"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context=".WordDetailFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/kana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kana"
                android:textSize="@dimen/abc_text_size_title_material" />
            <TextView
                android:id="@+id/kana_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.92"
                android:focusable="false"
                android:singleLine="false"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_byte_space"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word"
                android:singleLine="false"
                android:textSize="@dimen/abc_text_size_title_material" />
            <TextView
                android:id="@+id/word_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.92"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_byte_space"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="@dimen/abc_text_size_title_material" />
            <TextView
                android:id="@+id/category_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.92" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_byte_space"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/meaning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meaning"
                android:textSize="@dimen/abc_text_size_title_material" />
            <TextView
                android:id="@+id/meaning_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.92"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_byte_space"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/training_target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/training_target"
                android:textSize="@dimen/abc_text_size_title_material" />
            <TextView
                android:id="@+id/training_target_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.92"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_byte_space"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textSize="@dimen/abc_text_size_title_material" />
            <TextView
                android:id="@+id/other_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_byte_space"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/inserted_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inserted_date"
                android:textSize="@dimen/abc_text_size_title_material" />
            <TextView
                android:id="@+id/inserted_date_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_byte_space"/>
            <TextView
                android:id="@+id/updated_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updated_date"
                android:textSize="@dimen/abc_text_size_title_material" />
            <TextView
                android:id="@+id/updated_date_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
